# frontend-local-rust-os

./: Cargo.toml  Dioxus.toml  README.md
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/api/: apicalls.rs  mod.rs
src/components/: mod.rs  price_range_search.rs
