[package]
name = "frontend-local-rust-os"
version = "0.1.0"
authors = ["juanloaiza21 <juan400reyesloaiza@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Eliminar 'fermi' de las características
dioxus = { version = "0.6.3", features = ["desktop", "router"] }
dioxus-desktop = "0.6.3"
log = "0.4"
dioxus-logger = "0.4.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
